syntax = "proto3";

package pb;

option go_package = "pb/";

// Request message with user ID
message GetUserRequest {
    int32 id = 1;
}

// User message
message User {
    int32 id = 1;
    string fullname = 2;
    string email = 3;
    string image = 4;
}

// gRPC service definition
service UserService {
    rpc GetUser(GetUserRequest) returns (User);
}